# nyord-vpn

./: CHANGELOG.md  CLEANUP.txt  CONSIDERATIONS.md  PLAN.md  PROGRESS.md  README.md  REPO_CONTENT.txt  TODO.md  VERSION.txt  VIBE.txt  cleanup.py  logs.txt  nyord_vpn.txt  pyproject.toml  repomix-output.txt
.cursor/rules/: filetree.mdc  new.mdc  nyord-vpn.mdc
.github/workflows/: push.yml  release.yml
.specstory/history/: 2025-02-22_19-00-comparison-of-njord-and-nyord-vpn-implementations.md  2025-02-22_19-00-fixing-logging-format-error-in-python.md  2025-02-22_19:00-comparison-of-njord-and-nyord-vpn-implementations.md  2025-02-22_20-24-managing-todos-and-development-tasks.md  2025-02-22_20:24-managing-todos-and-development-tasks.md  2025-02-22_21-08-final-decision-and-todo-update.md  2025-02-22_21-21-git-management-and-todo-updates.md  2025-02-22_21-59-git-management-and-todo-updates.md  2025-02-22_21:21-git-management-and-todo-updates.md  2025-02-22_21:59-git-management-and-todo-updates.md  2025-02-22_22-27-git-management-and-todo-updates.md  2025-02-22_22:27-git-management-and-todo-updates.md  2025-02-22_23-26-nordvpn-client-implementation-discussion.md  2025-02-22_23-35-task-management-and-project-update.md  2025-02-22_23-55-updating-todo-md-and-project-management.md  2025-02-22_23:26-nordvpn-client-implementation-discussion.md  2025-02-22_23:35-untitled.md  2025-02-22_23:55-untitled.md  2025-02-23_00-09-updating-todo-md-and-task-prioritization.md  2025-02-23_00:02-task-management-and-collaboration-strategy.md  2025-02-23_00:02-untitled.md  2025-02-23_00:09-updating-todo-md-and-task-prioritization.md  2025-02-23_01-01-codebase-analysis-and-optimization-discussion.md  2025-02-23_01-43-importerror-in-nyord-vpn-module.md  2025-02-23_01-55-understanding-vpn-cli-commands-and-issues.md  2025-02-23_01:01-codebase-analysis-and-optimization-discussion.md  2025-02-23_01:43-importerror-in-nyord-vpn-module.md  2025-02-23_01:55-understanding-vpn-cli-commands-and-issues.md  2025-02-23_01:55-untitled.md  2025-02-23_02-15-python-virtual-environment-setup-and-testing.md  2025-02-23_02-34-vpn-connection-troubleshooting-with-python.md  2025-02-23_02:15-python-virtual-environment-setup-and-testing.md  2025-02-23_02:34-vpn-connection-troubleshooting-with-python.md  2025-02-23_04-09-executing-python-vpn-connection-command.md  2025-02-23_04-56-vpn-connection-troubleshooting.md  2025-02-23_04:09-executing-python-vpn-connection-command.md  2025-02-23_04:56-vpn-connection-troubleshooting.md  2025-02-23_05-42-vpn-connection-status-troubleshooting.md  2025-02-23_05-54-comparing-vpn-management-tools-openpyn-vs-nyord.md  2025-02-23_05:42-vpn-connection-status-troubleshooting.md  (+63 more)
src/nyord_vpn/: __init__.py  __main__.py  _templates.py  api_client.py  base.py  client.py  country_cache.py  exceptions.py  models.py  nyord_vpn.py  server_manager.py  state_manager.py  utils.py  vpn_manager.py
src/nyord_vpn/api/: __init__.py  api.py  base.py  legacy.py  njord.py  v1_countries.json  v1_countries.py  v1_groups.json  v1_groups.py  v1_recommendations.json  v1_recommendations.py  v1_technologies.json  v1_technologies.py  v2_servers.json  v2_servers.py
src/nyord_vpn/api/.specstory/history/: 2025-02-24_18-15-creating-endpoints-for-json-files.md
src/nyord_vpn/api/njord/: __init__.py  client.py
src/nyord_vpn/cli/: commands.py  main.py
src/nyord_vpn/core/: __init__.py  api.py  base.py  client.py  config.py  exceptions.py  factory.py
src/nyord_vpn/data/: __init__.py  countries.json  countries.py  country_ids.json
src/nyord_vpn/network/: __init__.py  country.py  server.py  vpn.py  vpn_commands.py
src/nyord_vpn/oldsh/: nordvpn-maccli.sh
src/nyord_vpn/scripts/: __init__.py  update_countries.py
src/nyord_vpn/storage/: __init__.py  models.py  state.py
src/nyord_vpn/types/: pycountry.pyi
src/nyord_vpn/utils/: __init__.py  connection.py  log_utils.py  logging.py  network.py  retry.py  security.py  system.py  templates.py  utils.py  validation.py
tests/: __init__.py  conftest.py  test_api.py  test_client.py  test_config.py  test_legacy_api.py  test_network.py  test_njord_api.py  test_package.py  test_security.py  test_server_manager.py  test_system.py  test_v1_countries.py  test_v1_groups.py  test_v1_recommendations.py  test_v1_technologies.py  test_v2_servers.py  test_validation.py
tests/integration/: __init__.py  test_config_loading.py  test_connection.py  test_errors.py  test_validation_integration.py
